# matrix-archive-module

./: .editorconfig  .gitignore  README.md  compose.yaml  main.py  publiccode.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Support_question.md
database/: init_users.sh
src/bot/: Dockerfile  archive.py  requirements.txt
src/module/: archive.py
synapse/conf/: config.json  homeserver.yaml  localhost.log.config  log.config
tests/integration/: test_integration.py
